# api/src/routes/index.ts
@@ -1,9 +1,11 @@
 import { Router } from 'express';
 import contactRouter from './ContactRoutes';
-
+import emailMessageRouter from './EmailRoutes';
+// routes for /contacts and /contact endpoints
 const routes = Router();
 
 routes.use(contactRouter);
+routes.use(emailMessageRouter);
 
 export default routes;
 
